// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SDK Exports Snapshot > Test Context Structure > should create context with all required properties 1`] = `
[
  "api",
  "config",
  "cwd",
  "host",
  "hostContext",
  "outdir",
  "platform",
  "pluginId",
  "pluginVersion",
  "requestId",
  "runtime",
  "signal",
  "tenantId",
  "trace",
  "ui",
]
`;

exports[`SDK Exports Snapshot > Test Context Structure > should match UI methods snapshot 1`] = `
[
  "box",
  "colors",
  "confirm",
  "debug",
  "divider",
  "error",
  "info",
  "json",
  "newline",
  "prompt",
  "sideBox",
  "spinner",
  "success",
  "symbols",
  "table",
  "warn",
  "write",
]
`;

exports[`SDK Exports Snapshot > Test Context Structure > should match colors API snapshot 1`] = `
[
  "accent",
  "bold",
  "dim",
  "emphasis",
  "error",
  "foreground",
  "highlight",
  "info",
  "inverse",
  "muted",
  "primary",
  "secondary",
  "success",
  "underline",
  "warning",
]
`;

exports[`SDK Exports Snapshot > Test Context Structure > should match platform services snapshot 1`] = `
[
  "analytics",
  "cache",
  "config",
  "documentDatabase",
  "embeddings",
  "eventBus",
  "invoke",
  "llm",
  "logger",
  "logs",
  "sqlDatabase",
  "storage",
  "vectorStore",
]
`;

exports[`SDK Exports Snapshot > Type Exports > should export core contract types 1`] = `
{
  "hasColorFunction": false,
  "hasColors": false,
  "hasPlatformServices": false,
  "hasPluginAPI": false,
  "hasPluginContextV3": false,
  "hasRuntimeAPI": false,
  "hasUIFacade": false,
}
`;

exports[`SDK Exports Snapshot > should match snapshot of all exported names 1`] = `
[
  "FileFeedbackStore",
  "FileHistoryStore",
  "MemoryFeedbackStore",
  "MemoryHistoryStore",
  "MessageBuilder",
  "MessageRouter",
  "PluginError",
  "TimingTracker",
  "ciEnvironmentPreset",
  "combinePermissions",
  "combinePresets",
  "commonErrors",
  "createTestContext",
  "createTool",
  "defineAction",
  "defineCommand",
  "defineCommandFlags",
  "defineEnv",
  "defineError",
  "defineFlags",
  "defineHandler",
  "defineManifest",
  "defineMessage",
  "defineRoute",
  "defineWebSocket",
  "defineWebhook",
  "discoverSubRepoPaths",
  "displayArtifacts",
  "displayArtifactsCompact",
  "displaySingleArtifact",
  "errorResult",
  "findRepoRoot",
  "formatCommandHelp",
  "formatError",
  "fullEnvPreset",
  "generateExamples",
  "getDegradedStatus",
  "getLLMTier",
  "getMonitoringSnapshot",
  "gitWorkflowPreset",
  "infoResult",
  "isCLIHost",
  "isCacheAvailable",
  "isEmbeddingsAvailable",
  "isLLMAvailable",
  "isPlatformConfigured",
  "isRESTHost",
  "isVectorStoreAvailable",
  "isWSHost",
  "isWebhookHost",
  "isWorkflowHost",
  "kbPlatformPreset",
  "llmAccessPreset",
  "metricsList",
  "minimalPreset",
  "npmPublishPreset",
  "parseEnvFromRuntime",
  "presets",
  "sectionHeader",
  "sideBorderBox",
  "statusLine",
  "successResult",
  "trackAnalyticsEvent",
  "useAnalytics",
  "useCache",
  "useConfig",
  "useEmbeddings",
  "useEnv",
  "useLLM",
  "useLoader",
  "useLogger",
  "useLoggerWithContext",
  "usePlatform",
  "useStorage",
  "useVectorStore",
  "vectorStorePreset",
  "warningResult",
]
`;

exports[`SDK Exports Snapshot > should match snapshot of exported functions 1`] = `
[
  "FileFeedbackStore",
  "FileHistoryStore",
  "MemoryFeedbackStore",
  "MemoryHistoryStore",
  "MessageBuilder",
  "MessageRouter",
  "PluginError",
  "TimingTracker",
  "combinePermissions",
  "combinePresets",
  "createTestContext",
  "createTool",
  "defineAction",
  "defineCommand",
  "defineCommandFlags",
  "defineEnv",
  "defineError",
  "defineFlags",
  "defineHandler",
  "defineManifest",
  "defineMessage",
  "defineRoute",
  "defineWebSocket",
  "defineWebhook",
  "discoverSubRepoPaths",
  "displayArtifacts",
  "displayArtifactsCompact",
  "displaySingleArtifact",
  "errorResult",
  "findRepoRoot",
  "formatCommandHelp",
  "formatError",
  "generateExamples",
  "getDegradedStatus",
  "getLLMTier",
  "getMonitoringSnapshot",
  "infoResult",
  "isCLIHost",
  "isCacheAvailable",
  "isEmbeddingsAvailable",
  "isLLMAvailable",
  "isPlatformConfigured",
  "isRESTHost",
  "isVectorStoreAvailable",
  "isWSHost",
  "isWebhookHost",
  "isWorkflowHost",
  "metricsList",
  "parseEnvFromRuntime",
  "sectionHeader",
  "sideBorderBox",
  "statusLine",
  "successResult",
  "trackAnalyticsEvent",
  "useAnalytics",
  "useCache",
  "useConfig",
  "useEmbeddings",
  "useEnv",
  "useLLM",
  "useLoader",
  "useLogger",
  "useLoggerWithContext",
  "usePlatform",
  "useStorage",
  "useVectorStore",
  "warningResult",
]
`;
